--- a/src/App.css
+++ b/src/App.css
@@ -122,6 +122,10 @@ html {
     align-items: center;
     padding-left: 100px;
     padding-right: 100px;
+    position:absolute;
+    left:0;
+    bottom:0;
+    right:0;
 }
 
 .footerLink img {
