--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,9 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Raleway', sans-serif;
-    background: #00416A;
-    /* fallback for old browsers */
-    background: -webkit-linear-gradient(to bottom, #E4E5E6, #00416A);
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to bottom, #E4E5E6, #00416A);
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    height: 100%;
+    background-color: #8BC6EC;
+    background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
+
     
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -18,7 +14,14 @@ html {
     height: 100%;
 }
 
-.nav {
+.App{
+    display: flex;
+    min-height: 100vh;
+    
+    flex-direction: column;
+}
+
+.nav1 {
     display: flex;
     justify-content: space-between;
     flex-direction: row;
@@ -38,6 +41,7 @@ html {
     color: black;
     font-size: 25px;
     transition: 0.5s;
+    font-family: 'Caveat', cursive;;
 }
 
 .link:active,
@@ -66,6 +70,10 @@ html {
     color: slategray;
 }
 
+.modalText{
+    font-size: medium;
+}
+
 .mainTop {
     display: flex;
     justify-content: center;
@@ -78,19 +86,18 @@ html {
     width: 55%;
 }
 
+.iconContainer{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 .mainTech {
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
     margin-bottom: 25px;
-}
-
-.techs {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
 }
 
 .techIcon {
@@ -110,9 +117,21 @@ html {
 }
 
 .projectIcon{
-    height: 400px;
+    height: 300px;
     width: 500px;
-    padding-bottom: 15px;
+    -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0); 
+    box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+    margin-bottom: 15px;
+    transition: all .2s ease-in-out; 
+}
+
+.projectIcon:hover{
+    transform: scale(1.2);
+    cursor: pointer;
+}
+
+.flexHeight{
+    flex: 1;
 }
 
 .footer {
@@ -168,10 +187,10 @@ html {
 }
 
 .col-3 {
-    float: left;
-    width: 50%;
-    margin: 40px 3%;
-    position: relative;
+    float: left !important;
+    width: 50% !important;
+    margin: 40px 3% !important;
+    position: relative !important;
 }
 
 
@@ -311,19 +330,23 @@ textarea {
         width: 75px;
         padding: 15px;
     }
-    .nav,
+
+    .techs{
+        font-size: 14px;
+    }
+    .nav1,
     .footer {
         display: flex;
         justify-content: space-between;
         flex-direction: column;
         align-items: center;
-        padding-left: 10px;
-        padding-right: 10px;
-        padding-bottom: 10px;
+        padding-left: 0;
+        padding-right: 0;
+        padding-bottom: 15px;
+        
     }
     .welcome {
-        padding: 10px;
-        font-size: 25px;
+        font-size: 16px;
         text-align: center;
     }
     .link {
@@ -332,9 +355,20 @@ textarea {
         color: black;
         font-size: 20px;
         transition: 0.3s;
+        text-decoration: underline;
     }
     .link:active,
     .link:visited {
         color: black;
+    }
+
+
+    .projectIcon{
+        height: 200px;
+        width: 300px;
+        -webkit-box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0); 
+        box-shadow: 0px 10px 13px -7px #000000, 5px 5px 15px 5px rgba(0,0,0,0);
+        margin-bottom: 15px;
+        transition: all .2s ease-in-out; 
     }
 }
